# cloudbrain-mcp

./: .gitignore  README.md
src/agents-mcp-server/: .gitignore  README.md  pyproject.toml
src/agents-mcp-server/agents_mcp_server/: __main__.py  server.py
src/agents-mcp-server/agents_mcp_server/core/: registry_manager.py
src/agents-mcp-server/agents_mcp_server/core/resources/: __init__.py  agent_card.py  agent_cards.py  mcp_servers.py
src/agents-mcp-server/agents_mcp_server/core/tools/: __init__.py  find_a2a_agents.py  find_mcp_servers.py  get_agent_details.py  get_mcp_server_details.py  list_mcp_servers.py
src/agents-mcp-server/agents_mcp_server/models/: __init__.py  agent_card.py  api_responses.py  mcp_server.py
src/agents-mcp-server/agents_mcp_server/static/agent_cards/: aws_orchestrator_agent.json  jenkins_server_agent.json
src/agents-mcp-server/agents_mcp_server/static/mcp_servers/: jenkins_mcp_server.json  terraform_mcp_server.json
src/agents-mcp-server/agents_mcp_server/utils/: __init__.py  abstracts.py  exceptions.py  logging.py
src/argocd-mcp-server/: .gitignore  Dockerfile  README.md  pyproject.toml
src/argocd-mcp-server/argocd_mcp_server/: server.py
src/argocd-mcp-server/argocd_mcp_server/core/tools/: argocd_application_handler.py  argocd_project_handler.py  argocd_resource_handler.py
src/argocd-mcp-server/argocd_mcp_server/models/: application.py  resource.py
src/argocd-mcp-server/argocd_mcp_server/scripts/: fetch_argocd_token.py
src/argocd-mcp-server/argocd_mcp_server/static/: ARGOCD_BEST_PRACTICES.md  ARGOCD_MCP_INSTRUCTIONS.md  ARGOCD_WORKFLOW.md  __init__.py
src/argocd-mcp-server/argocd_mcp_server/utils/: argocd_api_helper.py  logger.py
src/helm-mcp-server/: .gitignore  Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml
src/helm-mcp-server/helm_mcp_server/: server.py
src/helm-mcp-server/helm_mcp_server/core/tools/: helm_handler.py
src/helm-mcp-server/helm_mcp_server/models/: __init__.py  models.py
src/helm-mcp-server/helm_mcp_server/scripts/: scrape_helm_best_practices.py
src/helm-mcp-server/helm_mcp_server/static/: HELM_BEST_PRACTICES.md  HELM_MCP_INSTRUCTIONS.md  HELM_WORKFLOW_GUIDE.md  __init__.py
src/helm-mcp-server/helm_mcp_server/utils/: helm_helper.py  logger.py
