[project]
name = "agents-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "mcp[cli]>=1.10.1",
    "pydantic>=2.11.7",
]
[project.scripts]
agents-mcp-server = "agents_mcp_server.__main__:main"
